@@ -18,6 +18,8 @@ Extension Modules
 Library
 -------
 
+- The user module has been removed.
+
 - The imputil module has been removed.
 
 Build
